# evolution_model

./: Cargo.toml  github_update_token.txt  http
resources/: default_settings.json
resources/http/: extras.js  headline_insert.html  index.html  lab_1_timer.v  lab_1_verilog.v  lab_2_calc.v  lab_2_calc.xdc  main.js  main.min.js  test_state_machine.v  writes.txt
resources/http/_weblib/css/: styles.css
resources/http/_weblib/js/: extras.js  geometry.js
resources/http/about/: index.html  main.js
resources/http/controls/: index.html
resources/simulations/main/: settings.json  simulation.json
src/: main.rs
